deployments/company-private-configs/network-name/private/epi-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Credentials true;
      add_header Access-Control-Allow-Headers "Content-Type, Content-Length, X-Content-Length, Access-Control-Allow-Origin, User-Agent, authorization, Authorization, x-signature, token, epiProtocolVersion, getProductData";
    nginx.ingress.kubernetes.io/default-backend: epi
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: pla-health-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: 'PLACEHOLDER_HOST'
      http:
        paths:
          - backend:
              service:
                name: epi
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "PLACEHOLDER_TLS_HOST"
      secretName: "PLACEHOLDER_TLS_SECRET_NAME"
